expanded api collections and added initial jest test setup
